Fri Feb 16 15:51:59 1996  Mark Eichin  <eichin@cygnus.com>

	* ftpcmd.y (yylex): error handling changes from kbalk@hp.com.

Tue Jan 16 18:44:42 1996  Mark Eichin  <eichin@cygnus.com>

	* ftpd.c (user): 331 is more appropriate for kuserok failure.

Wed Feb  7 13:33:41 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (clean): Remove ftpd

Thu Jan 18 18:39:06 1996  Sam Hartman  <hartmans@zygorthian-space-raiders.MIT.EDU>

	* configure.in: Check for crypt in -lcrypt

	* ftpd.c: Conditionalize sys_errlist

	* configure.in: Check to declare sys_errlist.

Thu Jan 18 14:55:42 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* ftpd.c : Only return an unable to acquire credentials error if all possible services fail.

Sun Jan 14 02:58:42 1996  Mark Eichin  <eichin@cygnus.com>

	* ftpd.c (auth_data): call gss_release_cred on the server_creds we
	acquired, before they leave scope.

Sun Jan 14 02:47:19 1996  Karri Balk - Contractor <kbalk@cup.hp.com>

	* ftpd.c (gss_services): list of gssapi service names to try.
	(auth_data): loop over gss_services.

Sun Jan 14 01:54:35 1996  Bill Schoofs <wjs@cray.com>

	* Makefile.in (DEFINES): define NOCONFIDENTIAL for future use.
	* ftpcmd.y (CCC): ditch broken CCC code, return proper 534 code.
	(PBSZ): return proper code 501 for bad PBSZ argument
	(PROT): recognize PROT E.
	(cmdtab): add CCC so as to cleanly reject it.
	(getline): reject CONF as unsupported (but put in code to
	potentially recognize it in the future.) Reject protected commands
	of auth_type isn't yet set.
	* ftpd.c (setlevel): use 536, not 504, for invalid level, and
	use levelnames to find the proper name.
	(user): if kuserok succeeds, respond 232, not 231; if it fails,
	respond 336 (though 331 might be more appropriate.)
	(auth): fix spelling error.
	
Tue Jan  2 19:19:16 1996  Mark Eichin  <eichin@cygnus.com>

	* ftpd.c: use HAVE_SETEUID and HAVE_SETRESUID to figure out how
	to emulate seteuid instead of assuming hpux.