@@ -1,3 +1,7 @@
+Fri Mar 15 01:24:39 1996  Richard Basch  <basch@lehman.com>
+
+        * configure.in, ftpd.c: Added shadow password support.
+
 Fri Feb 16 15:51:59 1996  Mark Eichin  <eichin@cygnus.com>
 
 	* ftpcmd.y (yylex): error handling changes from kbalk@hp.com.
